# Arrata-APP

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md  cliff.toml  flake.nix  index.html  input.css  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.cargo-disabled/: config.toml
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/workflows/: New-Release.yaml  cargo-verify.yaml  merge.yaml  release.yaml  release.yml
docs/: index.html  tailwind.css
docs/assets/: arrata_app-dxh2a153918a29e9f29.js  arrata_app-dxh4d8badb53720f16b.js  arrata_app-dxh50b6f33ed45ebdea.js  arrata_app-dxh70ba739b323fbf.js  arrata_app-dxh736d20c7baf4db28.js  arrata_app-dxh99cbf3c2329f3eca.js  arrata_app-dxha42c787c2a4272f7.js  arrata_app-dxha7a7ca55b6f6ca5f.js  arrata_app-dxhb576311fdeb8919.js  arrata_app-dxhc6580ffc076e613.js  arrata_app-dxhd91db061a0a9320.js  arrata_app-dxhe18f8024f748a91c.js  arrata_app-dxhf9715269d993e771.js  arrata_app_bg-dxh161fa0c7356fa959.wasm  arrata_app_bg-dxh176496ab1bbec1c.wasm  arrata_app_bg-dxh561ef3cd5bf2749.wasm  arrata_app_bg-dxh58a890432ed7c265.wasm  arrata_app_bg-dxh6cf64ea3e9358f40.wasm  arrata_app_bg-dxh711f1ed8834f8f0.wasm  arrata_app_bg-dxh779823bb41883a7e.wasm  arrata_app_bg-dxh837057467cb3bd49.wasm  arrata_app_bg-dxh949a793ea83dfe27.wasm  arrata_app_bg-dxha7f0ccef2559dfb5.wasm  arrata_app_bg-dxhdc2dfe596c89b949.wasm  arrata_app_bg-dxhded4629b1f4edbb.wasm  arrata_app_bg-dxhe1dff3d8352560.wasm  tailwind-d7cb0a2fdff1696a.css  tailwind-dxh23a124ebc8b8e0e9.css  tailwind-dxh24753b11c875f46b.css  tailwind-dxh528ef33214c1885.css  tailwind-dxh62cf622accb233da.css  tailwind-dxh758a631d9618b672.css  tailwind-dxh788d5bd71fd7fe.css  tailwind-dxh8f58cb1da317a973.css  tailwind-dxha1137b4f46556137.css  tailwind-dxhae5639b41a3eb140.css  tailwind-dxhc3b473cb4f6da399.css  tailwind-dxhd7d43ab6f8674f9.css  tailwind-dxhe7cf54b32f0a2d.css  tailwind.css
docs/assets/dioxus/: Arrata Character Sheet Manager.js  Arrata Character Sheet Manager.js.br  Arrata Character Sheet Manager_bg.wasm  Arrata Character Sheet Manager_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
docs/assets/dioxus/snippets/dioxus-web-a95d8cc6c91ff8eb/src/: eval.js
docs/release/web/public/wasm/: arrata_app_bg.wasm.d.ts
docs/release/web/public/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
docs/wasm/: arrata_app.d.ts  arrata_app.d.ts.br  arrata_app.js  arrata_app.js.br  arrata_app_bg.wasm  arrata_app_bg.wasm.br  arrata_app_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
docs_desktop/: arrata_character_sheet_manager
src/: character.rs  dice.rs  lib.rs  main.rs  render.rs  stats.rs  storage.rs
src/app/: mod.rs  render.rs
src/character/: mod.rs  render.rs  structs.rs
src/dice/: mod.rs  render.rs  roll.rs  structs.rs
src/render/: character.rs  combat.rs  entrypoint.rs  inventory.rs  mod.rs  premade_quirks.rs  quirks.rs  rolls.rs  sidebar.rs  stats.rs
src/storage/: desktop.rs  mod.rs  web.rs
