[package]
name = "arrata_app"
edition = "2021"
authors = ["Kaleb Burris <kaleb.r.burris@gmail.com>"]
version = "0.0.0"
description = "An application for handling Arrata character sheets."
repository = "https://github.com/Arrata-TTRPG/Arrata-APP"
keywords = ["character-sheet", "ttrpg", "dioxus", "app"]
categories = ["game", "ttrpg", "dioxus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.135", default-features = false}
rand = { version = "0.8.5" , default-features = false }
dioxus = { version = "0.6.1", features = [] }
log = "0.4.25"
rfd = "0.15.2"
semver = "1.0.24"
bitcode = "0.6.3"

# Web dependencies
getrandom = { version = "0.2.15", optional = true }
urlencoding = { version = "2.1.3", optional = true }
gloo-storage = { version = "0.3.0" }
reqwest = "0.12.12"

[dependencies.dioxus-free-icons]
git = "https://github.com/dioxus-community/dioxus-free-icons.git"
version = "0.9.0"
features = ["bootstrap"]

[dependencies.arrata-lib]
git = "https://github.com/Arrata-TTRPG/Arrata-LIB"
branch = "main"

[features]
web = ["dioxus/web", "getrandom/js", "dep:urlencoding"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release.build-override]
codegen-units = 1
debug = false
opt-level = 'z'
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
