cargo-features = ["panic-immediate-abort"]

[package]
name = "arrata_app"
edition = "2024"
authors = ["Kaleb Burris <kaleb.r.burris@gmail.com>"]
version = "0.0.0"
description = "An application for handling Arrata character sheets."
repository = "https://github.com/Arrata-TTRPG/Arrata-APP"
keywords = ["character-sheet", "ttrpg", "dioxus", "app"]
categories = ["game", "ttrpg", "dioxus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.149", default-features = false }
rand = { version = "0.10", default-features = false }
dioxus = { version = "0.7.5", features = [] }
semver = "1.0.28"
bitcode = "0.6.9"
base64 = "0.22"

# Web dependencies
getrandom = { version = "0.4.2", optional = true }
urlencoding = { version = "2.1.3", optional = true }
gloo-storage = { version = "0.4.0" }
gloo-timers = { version = "0.4.0", features = ["futures"] }
thousands = "0.2.0"
wasm-bindgen = "0.2.117"
js-sys = "0.3.94"
wasm-bindgen-futures = "0.4.67"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Response"]

[dependencies.dioxus-free-icons]
git = "https://github.com/dioxus-community/dioxus-free-icons.git"
version = "0.10.0"
features = ["bootstrap"]

[dependencies.arrata-lib]
git = "https://github.com/Arrata-TTRPG/Arrata-LIB"
branch = "main"

[features]
web = ["dioxus/web", "getrandom/wasm_js", "dep:urlencoding"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile.release]
opt-level = 'z'
panic = 'immediate-abort'
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 'z'
debug = false
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
