cargo-features = ["panic-immediate-abort"]

[package]
name = "arrata_app"
edition = "2024"
authors = ["Kaleb Burris <kaleb.r.burris@gmail.com>"]
version = "0.0.0"
description = "An application for handling Arrata character sheets."
repository = "https://github.com/Arrata-TTRPG/Arrata-APP"
keywords = ["character-sheet", "ttrpg", "dioxus", "app"]
categories = ["game", "ttrpg", "dioxus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.149", default-features = false }
dioxus = { version = "0.7.5", default-features = false, features = [
  "minimal",
  "asset",
  "document",
  "mounted",
] }
semver = { version = "1.0.28", default-features = false }
bitcode = { version = "0.6.9", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Web dependencies
getrandom = { version = "0.4.2", optional = true }
urlencoding = { version = "2.1.3", optional = true }
gloo-storage = { version = "0.4.0" }
gloo-timers = { version = "0.4.0", features = ["futures"] }
thousands = { version = "0.2.0", default-features = false }
wasm-bindgen = "0.2.117"
js-sys = "0.3.94"
wasm-bindgen-futures = "0.4.67"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Response"]

[dependencies.dioxus-free-icons]
version = "0.10.0"
features = ["bootstrap"]

[dependencies.arrata-lib]
git = "https://github.com/Arrata-TTRPG/Arrata-LIB"
tag = "v0.1.0"

[features]
web = ["dioxus/web", "getrandom/wasm_js", "dep:urlencoding"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile.release]
opt-level = 'z'
panic = 'immediate-abort'
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 'z'
debug = false
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
